--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Log in</title>
   </head>
   <body>
+    <h1>Log in with your user</h1>
+    <div id="login-container">
+      Username:
+      <input type="text" id="username" placeholder="">
+      <br>
+      <br>
+      Password:
+      <input type="password" name="password" placeholder="">
+      <br>
+      <br>
+      <input type="button" id="log-in" value="Log in">
+      <input type="button" id="register" value="Sign up">
+    </div>
+    <script src="public/index.js"></script>
+    <script src="public/makeXhrRequest.js"></script>
+
   </body>
-  <script src="index.js"></script>
-  <script src="makeXhrRequest.js"></script>
-</html>
