--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,11 @@
       <input type="password" name="password" placeholder="">
       <br>
       <br>
-      <input type="button" id="log-in" value="Log in">
-      <input type="button" id="register" value="Sign up">
+      <button id="log-in">Log in</button>
+      <button id="register">Register</button>
     </div>
-    <script src="public/index.js"></script>
-    <script src="public/makeXhrRequest.js"></script>
+    <script src="index.js"></script>
+    <script src="makeXhrRequest.js"></script>
 
   </body>
+</html>
