--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       <br>
       <br>
       Password:
-      <input type="password" name="password" placeholder="">
+      <input type="password" id="password" placeholder="">
       <br>
       <br>
       <button id="log-in">Log in</button>
